fixed footer z-index

--- a/assets/css/3-sections/_footer.sass
+++ b/assets/css/3-sections/_footer.sass
@@ -1,5 +1,7 @@
-.spacer
+html body div.spacer
   height: 200px
+  position: relative
+  z-index: -21
 
   @media (max-width: 1024px)
     display: none
